--- a/test/test.html
+++ b/test/test.html
@@ -21,7 +21,7 @@
         
         <meta charset="UTF-8">
         
-        <script src="../libs/jquery.js"></script>
+        <script src="./jquery.js"></script>
         <script src="../jquery-fn.js"></script>
     </head>
     <body></body>
